# embedded-machine-learning

./: readme.md  requirements.txt
cours/: EMBIA Cours 23-24.pptx  Projet EML.pptx  ~$Projet EML.pptx
cpp/: main.cpp
cpp/audio_preprocessing/: CMakeLists.txt  audio_preprocessing.cpp
cpp/audio_preprocessing/tools/: au_utils.h  matplotlibcpp.h
cpp/model/: CMakeLists.txt
cpp/predictor/: CMakeLists.txt
projet/: .gitignore  CMakeClean.cmake  CMakeLists.txt  au_to_csv.sh  checkAuExtraction.py  fft.csv  main.cpp  mu.csv  plot.py  requirements.txt  run.sh  signal.csv
projet/au_to_csv/: CMakeLists.txt  main.cpp  toto.py
projet/au_to_csv/csv/: signal.csv
projet/au_to_csv/src/: CMakeLists.txt  audio_preprocessing.cpp  audio_preprocessing.h
projet/au_to_csv/tools/: plot.h
projet/classification/: file.py  predict.py  train_model.py
projet/classification_cpp/: main.cpp
projet/classification_cpp/model_c/: DecisionTreeClassifier.h  RandomForestClassifier.h
projet/classification_python/: predict.py  train_model.py
projet/cpp/: CMakeLists.txt  main.cpp
projet/cpp/audio_preprocessing/: audio_preprocessing.cpp  audio_preprocessing.h
projet/cpp/audio_preprocessing/tools/: CMakeLists.txt  constants.h  matplotlibcpp.h  plot.h
projet/cpp/model/: CMakeLists.txt  DecisionTreeClassifier.h  LinearSVC.h  LinearSVC.txt  NeuralNetwork.tflite  RandomForestClassifier.h
projet/cpp/predictor/: CMakeLists.txt  common.h  predictor.cpp  predictor.h
projet/model/: LogisticRegression.joblib  MLPClassifier.joblib
projet/model_c/: DecisionTreeClassifier.h  RandomForestClassifier.h
projet/model_python/: DecisionTreeClassifier.joblib  MLPClassifier.joblib
projet/python/: main.py  predict.py  train_model.py
projet/resources/: scaler.joblib  scaler.json  scaler.txt
projet/resources/csv_files/: dataset_test.csv
projet/resources/model/: DecisionTreeClassifier.h  DecisionTreeClassifier.joblib  LinearSVC.h  LinearSVC.joblib  NeuralNetwork.tflite  RandomForestClassifier.h  Sequential.joblib
projet/resources/model_c/: DecisionTreeClassifier.h  RandomForestClassifier.h
projet/resources/model_python/: DecisionTreeClassifier.joblib  LinearSVC.joblib  MLPClassifier.joblib
projet/src/: CMakeLists.txt  audio_preprocessing.cpp  audio_preprocessing.h
projet/tools/: CMakeLists.txt  matplotlibcpp.h  plot.h
python/: predict.py  train_model.py
resources/csv_files/blues/blues.00001/: descriptor.csv
resources/csv_files/blues/blues.00003/: descriptor.csv
resources/csv_files/blues/blues.00004/: descriptor.csv
resources/csv_files/blues/blues.00005/: descriptor.csv
resources/csv_files/blues/blues.00007/: descriptor.csv
resources/csv_files/blues/blues.00010/: descriptor.csv
resources/csv_files/blues/blues.00018/: descriptor.csv
resources/csv_files/blues/blues.00019/: descriptor.csv
resources/csv_files/blues/blues.00020/: descriptor.csv
resources/csv_files/blues/blues.00021/: descriptor.csv
resources/csv_files/blues/blues.00024/: descriptor.csv
resources/csv_files/blues/blues.00025/: descriptor.csv
resources/csv_files/blues/blues.00026/: descriptor.csv
resources/csv_files/blues/blues.00028/: descriptor.csv
resources/csv_files/blues/blues.00029/: descriptor.csv
resources/csv_files/blues/blues.00031/: descriptor.csv
resources/csv_files/blues/blues.00032/: descriptor.csv
resources/csv_files/blues/blues.00039/: descriptor.csv
resources/csv_files/blues/blues.00040/: descriptor.csv
resources/csv_files/blues/blues.00042/: descriptor.csv
resources/csv_files/blues/blues.00043/: descriptor.csv
resources/csv_files/blues/blues.00047/: descriptor.csv
resources/csv_files/blues/blues.00048/: descriptor.csv
resources/csv_files/blues/blues.00050/: descriptor.csv
resources/csv_files/blues/blues.00055/: descriptor.csv
resources/csv_files/blues/blues.00056/: descriptor.csv
resources/csv_files/blues/blues.00057/: descriptor.csv
resources/csv_files/blues/blues.00060/: descriptor.csv
resources/csv_files/blues/blues.00061/: descriptor.csv
resources/csv_files/blues/blues.00072/: descriptor.csv
resources/csv_files/blues/blues.00074/: descriptor.csv
resources/csv_files/blues/blues.00083/: descriptor.csv
resources/csv_files/blues/blues.00084/: descriptor.csv
resources/model/: Sequential.joblib
ressources/: checkAuExtraction.py
(+954 files in other folders)
